--- a/medOptix/src/main/resources/templates/clinic_dashboard.html
+++ b/medOptix/src/main/resources/templates/clinic_dashboard.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>Clinic dashboard</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 </head>
 <body>
-<h1>error</h1>
-<h2>invalid creds</h2>
+<h1>Clinic dashboard</h1>
 </body>
 </html>
