--- a/medOptix/src/main/resources/templates/clinic_reg_page.html
+++ b/medOptix/src/main/resources/templates/clinic_reg_page.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Clinic registration</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 </head>
 <body>
 <div class="form">
-    <form method="post" action="/register" th:object="${registerRequest}">
+    <form method="post" action="/clinicRegister" th:object="${ClinicRegisterRequest}">
         <h2>Clinic registration</h2>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" name="login" placeholder="Name of the clinic" required>
+            <input type="text" name="name" placeholder="Name of the clinic" required>
         </div>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
@@ -29,7 +31,7 @@
         <div class="input-box">
             <input type="submit" name="sign-in" value="register">
         </div>
-        <a href="/index"><button class="button-1" role="button">Login now</button></a>
+        <a href="/clinicLogin"><button class="button-1" role="button">Login now</button></a>
     </form>
 </div>
 </body>
