--- a/medOptix/src/main/resources/templates/login_page.html
+++ b/medOptix/src/main/resources/templates/login_page.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>login page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 </head>
 <body>
 <div class="form">
@@ -10,11 +12,11 @@
         <h2>Login</h2>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" name="login" placeholder="Name" required>
+            <input type="email" name="email" placeholder="email" required>
         </div>
         <div class="input-box">
             <i class="fa fa-unlock-alt" aria-hidden="true"></i>
-            <input type="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"title="Must contain at least one number and one uppercase and one lowercase letter, and at least 8 or mare characters" required>
+            <input type="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and one lowercase letter, and at least 8 or mare characters" required>
         </div>
         <div class="input-box">
             <input type="submit" name="sign-in" value="login">
