--- a/medOptix/src/main/resources/templates/registration_page.html
+++ b/medOptix/src/main/resources/templates/registration_page.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 </head>
 <body>
 <div class="form">
@@ -10,7 +12,7 @@
         <h2>Register</h2>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" name="login" placeholder="Name" required>
+            <input type="text" name="name" placeholder="Name" required>
         </div>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
@@ -21,9 +23,17 @@
             <input type="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and one lowercase letter, and at least 8 or mare characters" required>
         </div>
         <div class="input-box">
+            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+            <input type="text" name="age" placeholder="Age" required>
+        </div>
+        <div class="input-box">
+            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+            <input type="text" name="gender" placeholder="Gender" required>
+        </div>
+        <div class="input-box">
             <input type="submit" name="sign-in" value="register">
         </div>
-        <a href="/index"><button class="button-1" role="button">Login now</button></a>
+        <a href="/login"><button class="button-1" role="button">Login now</button></a>
     </form>
 </div>
 </body>
