--- a/medOptix/src/main/resources/templates/welcome_page.html
+++ b/medOptix/src/main/resources/templates/welcome_page.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
 </head>
 <body>
-<h1>error</h1>
-<h2>invalid creds</h2>
+<h1>Welcome</h1>
+<a href="/userLogReg"><button class="button-1" role="button">User</button></a><br>
+<a href="/clinicLogReg"><button class="button-1" role="button">Clinic</button></a><br>
 </body>
 </html>
