--- a/medOptix/src/main/resources/templates/clinic_reg_page.html
+++ b/medOptix/src/main/resources/templates/clinic_reg_page.html
@@ -12,7 +12,11 @@
         <h2>Clinic registration</h2>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" name="name" placeholder="Name of the clinic" required>
+            <input type="text" name="name" placeholder="Name of the person" required>
+        </div>
+        <div class="input-box">
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <input type="text" name="clinicName" placeholder="Name of the clinic" required>
         </div>
         <div class="input-box">
             <i class="fa fa-user" aria-hidden="true"></i>
@@ -21,6 +25,14 @@
         <div class="input-box">
             <i class="fa fa-unlock-alt" aria-hidden="true"></i>
             <input type="password" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and one lowercase letter, and at least 8 or mare characters" required>
+        </div>
+        <div class="input-box">
+            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+            <input type="text" name="age" placeholder="Age" required>
+        </div>
+        <div class="input-box">
+            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+            <input type="text" name="gender" placeholder="Gender" required>
         </div>
         <div class ="input-box">
             <input type="text" name ="description" placeholder="Description" required>
